<resources>
    <string name="app_name">QuickTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_job">Add Job</string>
    <string name="title_activity_job_details">Job Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_job_expanded_detail">Job Specifics</string>
    <string name="title_activity_nav_drawer_adapter">NavDrawerAdapter</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_add_time">Manually Add Time</string>
    <string name="title_activity_learn_more">Learn More</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="color_prompt">Color</string>
    <string name="per_hour"> Per Hour</string>
    <string name="this_week"> Hours this week</string>
    <string name="earned_this_week"> Earned this week</string>
    <string name="avg">Averages:  </string>
    <string name="per_day">  Hours Per Day</string>
    <string name="per_week">  Hours Per Week</string>
    <string name="addr">Address:</string>
    <string name="pay">Earning Details:</string>
    <string-array name="color_array">

        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Brown</item>
        <item>Black</item>
    </string-array>
</resources>
