<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/jobDetailRowTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:textSize="37sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            android:layout_toRightOf="@+id/editButton"
            />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:elevation="5dp"
            android:background="@null"
            android:src="@drawable/ic_delete_gray" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:background="@null"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:elevation="5dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/ic_edit" />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addressLP"
            android:text="("
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/jobDetailAddress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/addressLP"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/addressRP"
            android:text=")"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/jobDetailAddress"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dollarSignPerHour"
            android:text="$"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/jobDetailHourly"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/dollarSignPerHour"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:text="@string/per_hour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/jobDetailHourly"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/jobDetailHoursThisWeek"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:text="@string/this_week"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/jobDetailHoursThisWeek"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
    </RelativeLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/jobDetailEarnedThisWeek"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:text="@string/earned_this_week"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/jobDetailEarnedThisWeek"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/avg"
            android:text="@string/avg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/jobDetailAvgHoursPerDay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/avg"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/hpd"
            android:text="@string/per_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/jobDetailAvgHoursPerDay"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/jobDetailAvgHoursPerWeek"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/hpd"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
        <TextView
            android:text="@string/per_week"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/jobDetailAvgHoursPerWeek"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxEms="11"
            android:singleLine="true"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </RelativeLayout>
</LinearLayout>