<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp"
    tools:context="com.android.quicktracker.com.quicktracker.JobExpandedDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.android.quicktracker.com.quicktracker.JobExpandedDetailActivity">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"></include>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addressLP"
                android:text="Example Job"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/firstDivider"
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginRight="15dp"
                android:background="#ffd3d3d3" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/avg"
                android:text="@string/addr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addressLP"
                android:text="("
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
            <TextView
                android:id="@+id/jobDetailAddress"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/addressLP"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                android:text="503 W High St, Urbana"
                />
            <TextView
                android:id="@+id/addressRP"
                android:text=")"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/jobDetailAddress"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/avg"
                android:text="@string/pay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dollarSignPerHour"
                android:text="$"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
            <TextView
                android:id="@+id/jobDetailHourly"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/dollarSignPerHour"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                android:text="15.00 "
                />
            <TextView
                android:text="@string/per_hour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/jobDetailHourly"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/jobDetailHoursThisWeek"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                android:text="20 "
                />
            <TextView
                android:text="@string/this_week"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/jobDetailHoursThisWeek"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/dollarSignETW"
                android:text="$"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />

            <TextView
                android:id="@+id/jobDetailEarnedThisWeek"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/dollarSignETW"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                android:text="200.00 "
                />
            <TextView
                android:text="@string/earned_this_week"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/jobDetailEarnedThisWeek"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/avg"
                android:text="@string/avg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/jobDetailAvgHoursPerDay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/avg"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                android:text="6 "
                />
            <TextView
                android:id="@+id/hpd"
                android:text="@string/per_day"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/jobDetailAvgHoursPerDay"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/jobDetailAvgHoursPerWeek"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/hpd"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                android:text="30 "
                />
            <TextView
                android:text="@string/per_week"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/jobDetailAvgHoursPerWeek"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxEms="11"
                android:singleLine="true"
                />
        </LinearLayout>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#2196F3"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>


</android.support.v4.widget.DrawerLayout>